crates/service/tests/hover/snapshots/features__hover__global_int_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": [
    {
      "language": "wat",
      "value": "(global i32)"
    }
  ],
  "range": {
    "start": {
      "line": 3,
      "character": 22
    },
    "end": {
      "line": 3,
      "character": 23
    }
  }
}
