crates/service/tests/hover/snapshots/features__hover__i32_const_hex.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\ni32\n```\n---\n- Dec: `250`\n- Hex: `0xFA`\n- Bin: `0b11111010`"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 14
    },
    "end": {
      "line": 3,
      "character": 19
    }
  }
}
