crates/service/tests/hover/snapshots/features__hover__imported_memory.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(memory 1 1)\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 20
    },
    "end": {
      "line": 3,
      "character": 21
    }
  }
}
