crates/service/tests/hover/snapshots/features__hover__imported_table.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(table $t 1 (ref null func))\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 18
    },
    "end": {
      "line": 3,
      "character": 19
    }
  }
}
