crates/service/tests/hover/snapshots/features__hover__instr_name.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\ni32.const\n```\nBinary Opcode: 0x41"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 11
    },
    "end": {
      "line": 2,
      "character": 20
    }
  }
}
