crates/service/tests/hover/snapshots/features__hover__local_decl.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(local $local i64)\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 17
    },
    "end": {
      "line": 2,
      "character": 23
    }
  }
}
